Version 1.1 - Tested on all major operating systems Exporting raw libraw interface for OSX/WIN/Linux