@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.librawfx</groupId>
     <artifactId>LibRawFX</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.1</version>
     
     <name>LibRawFX</name>
     <description>This installs the native lib libraw as a JavaFX Image format provider similar to imageIO before on Swing</description>
@@ -100,7 +100,7 @@
                     </compilerArgs>                                        
                 </configuration>
             </plugin>
-            <!-- <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>3.2.1</version>
@@ -125,13 +125,13 @@
                         </goals>
                         <configuration>                            
                             <additionalJOptions>                                
-                                <additionalJOption>-add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</additionalJOption>                                
-                                <additionalJOption>-add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</additionalJOption>
+                                <additionalJOption>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</additionalJOption>                                
+                                <additionalJOption>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</additionalJOption>
                             </additionalJOptions>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>   -->    
+            </plugin>   
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
